# BabelStream

./: .gitignore  CMakeLists.txt  OCLStream.cpp  SYCLStream.cpp
cmake/Modules/: ComputeCppCompilerChecks.cmake  FindComputeCpp.cmake
